# Grow-rs

./: .env  .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  FAKE-VARIANTS.md  LICENSE  README.md  build-fake-variants.nu  dist-workspace.toml  release.toml
.github/workflows/: check.yml  release.yml
crates/grow_core/: Cargo.toml
crates/grow_core/src/: lib.rs
crates/grow_core/tests/: sql_value_tests.rs
crates/grow_libsql/: Cargo.toml
crates/grow_libsql/src/: lib.rs
crates/grow_libsql/tests/: lib_tests.rs
crates/grow_sqlx/: Cargo.toml
crates/grow_sqlx/src/: lib.rs
crates/grow_sqlx/tests/: lib_tests.rs
crates/grow_surrealdb/: Cargo.toml
crates/grow_surrealdb/src/: lib.rs
crates/grow_surrealdb/tests/: lib_tests.rs
grow_libsql/: Cargo.toml
grow_libsql/src/: lib.rs
grow_sqlx/: Cargo.toml
grow_sqlx/src/: lib.rs
seeders/: User.ron
src/: lib.rs  main.rs  sql_value.rs
src/commands/: infer_db.rs  init.rs  mod.rs  new.rs  run.rs  status.rs
src/commands/run/: drivers.rs  entry.rs  fake.rs  fake_generated.rs  query.rs  seeder_tracker.rs  template.rs
src/functions/: infer_db.rs  init.rs  list.rs  mod.rs
src/functions/dbs/: libsql.rs  mod.rs  sqlx_db.rs
src/utils/: get_seeders.rs  mod.rs
temp/: sqlx.db
tests/: fake_tests.rs  integration_tests.rs  template_tests.rs  utils_tests.rs
