[package]
name = "grow-rs"
version = "1.0.0"
edition = "2021"
description = "🌱 Write sedders in RON"
categories = ["command-line-interface", "database", "development-tools"]
authors = ["Wilovy09"]
license = "MIT"
repository = "https://github.com/Wilovy09/Grow-rs"
homepage = "https://github.com/Wilovy09/Grow-rs"

[dependencies]
clap = { version = "4.5.23", features = ["derive", "string"] }
dotenv = "0.15.0"
tokio = { version = "1.42.0", features = ["full"] }
grow_libsql = { version = "0.1.0", path = "./grow_libsql" }
grow_sqlx = { version = "0.1.0", path = "./grow_sqlx" }

[[bin]]
name = "grow"
path = "src/main.rs"

[profile.dist]
inherits = "release"
codegen-units = 1
lto = true
