[package]
name = "grow-rs"
version = "2.0.0"
edition = "2021"
description = "🌱 Write sedders in RON"
categories = ["command-line-interface", "database", "development-tools"]
authors = ["Wilovy09"]
license = "MIT"
repository = "https://github.com/Wilovy09/Grow-rs"
homepage = "https://github.com/Wilovy09/Grow-rs"

[features]
default = ["libsql", "sqlx", "fake"]
fake = ["dep:fake", "dep:paste"]
libsql = ["dep:grow_libsql"]
sqlx = ["dep:grow_sqlx"]

[dependencies]
clap = { version = "4.5.23", features = ["derive", "string"] }
dotenv = "0.15.0"
tokio = { version = "1.42.0", features = ["full"] }
grow_libsql = { version = "0.1.1", path = "./grow_libsql", optional = true }
grow_sqlx = { version = "0.1.1", path = "./grow_sqlx", optional = true }
ron-edit = "0.2.0"
srtemplate = "0.3.1"
fake = { version = "3.1.0", optional = true }
paste = { version = "1.0.15", optional = true }

[[bin]]
name = "grow"
path = "src/main.rs"

[profile.dist]
inherits = "release"
codegen-units = 1
lto = true
