[package]
name = "grow-rs"
version = "2.1.1"
edition = "2021"
description = "🌱 Write sedders in RON"
categories = ["command-line-interface", "database", "development-tools"]
authors = ["Wilovy09"]
license = "MIT"
repository = "https://github.com/Wilovy09/Grow-rs"
homepage = "https://github.com/Wilovy09/Grow-rs"

[features]
default = ["libsql", "sqlx", "fake", "surrealdb"]
fake = ["dep:fake", "dep:paste"]
libsql = ["dep:grow_libsql"]
sqlx = ["dep:grow_sqlx"]
surrealdb = ["dep:grow_surrealdb"]

[dependencies]
dotenv = "0.15.0"

clap = { version = "4.5.23", features = ["derive", "string"] }
inquire = "0.7.5"

tokio = { version = "1.42.0", features = ["full"] }

srtemplate = "0.3.1"
fake = { version = "3.1.0", optional = true }
paste = { version = "1.0.15", optional = true }
ron-edit = { git = "https://github.com/Wilovy09/ron-edit", branch = "feat/inline-attributes" }

grow_core = { version = "0.1.0", path = "./crates/grow_core" }
grow_libsql = { version = "0.1.2", path = "./crates/grow_libsql", optional = true }
grow_sqlx = { version = "0.1.2", path = "./crates/grow_sqlx", optional = true }
grow_surrealdb = { version = "0.1.0", path = "./crates/grow_surrealdb", optional = true }

[[bin]]
name = "grow"
path = "src/main.rs"

[profile.dist]
inherits = "release"
codegen-units = 1
lto = true
